--- a/test.html
+++ b/test.html
@@ -1,6 +1,39 @@
-<html>
-<head>Testing</head>
-<body>
-<p>this is testing for git flow</p>
-</body>
-</html>
+    <!DOCTYPE html>
+    <html:html>
+     <html:head>
+    <html:title>A Look Into HTML6</html:title>
+     <html:meta type="title" value="Page Title">
+     <html:meta type="description" value="HTML example with namespaces">
+     <html:link src="css/test.css" title="Styles" type="text/css">
+     <html:link src="js/test.js" title="Script" type="text/javascript">
+     </html:head>
+     <html:body>
+     <header>
+     <logo>
+     <html:media type="image" src="images/xyz.png">
+     </logo>
+     <nav>
+     <html:a href="/img1">a1</a>
+     <html:a href="/img2">a2</a>
+     <html:a href="">a2</a>
+     </nav>
+     </header>
+     <content>
+     <article>
+     <h1>Heading of main article</h1>
+     <h2>Sub-heading of main article</h2>
+     <p>[...]</p>
+     <p>[...]</p>
+     </article>
+     <article>
+     <h1>The concept of HTML6</h1>
+     <h2>Understanding the basics</h2>
+     <p>[...]</p>
+     </article>
+     </content>
+     <footer>
+     <copyright>This site is &copy; to Anonymous 2014</copyright>
+     </footer>
+     </html:body>
+    </html:html>
+       <!--this is Html6 formart code!-->
